--- a/templates/simple/src/CMakeLists.txt
+++ b/templates/simple/src/CMakeLists.txt
@@ -1,9 +1,6 @@
-# Set source files here.
-set(SOURCES lib.cpp)
-
 # Create library.
-add_library(project_name_lib STATIC ${SOURCES})
+add_library(project_name_lib STATIC project_name.cpp project_name.h)
 
 # Create executable.
-add_executable(project_name main.cpp ${SOURCES})
+add_executable(project_name main.cpp)
 target_link_libraries(project_name PRIVATE project_name_lib)
